Fix EZP-27240: Content browser does not display data on Safari
(cherry picked from commit 1418f27167c6d08610469ce607e2eb61c60db578)

--- a/Resources/public/css/views/universaldiscovery/explorer.css
+++ b/Resources/public/css/views/universaldiscovery/explorer.css
@@ -4,11 +4,13 @@
     flex-direction: row;
     overflow-x: auto;
     white-space: nowrap;
+    flex: 1;
+    position: relative;
 }
 
 
 .ez-view-universaldiscoveryfinderexplorerview {
-    height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     overflow-x: auto;
